Update menu in mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+  --animation-curve: cubic-bezier(1, 0, 0, 1);
+}
 *,
 *:before,
 *:after {
@@ -53,6 +57,65 @@ header * {
   top: auto !important;
   bottom: 0 !important;
 }
+/* Menu Icon */
+label {
+  width: 21px;
+  height: 3px;
+  background-color: white;
+  position: absolute;
+  left: 0;
+  cursor: pointer;
+}
+label::before,
+label::after {
+  content: "";
+  width: 21px;
+  height: 3px;
+  background-color: white;
+  position: absolute;
+  display: block;
+  color: white;
+  transition: all 0.6s var(--animation-curve);
+}
+label::before {
+  top: -250%;
+  left: 0%;
+  transform: rotateZ(0deg);
+  transform-origin: left top;
+}
+label::after {
+  bottom: -255%;
+  left: 0%;
+  transform: rotateZ(0deg);
+  transform-origin: left bottom;
+}
+
+#toggle:checked ~ label::before {
+  content: "";
+  background-color: #fff;
+  transform: rotateZ(41deg);
+  left: 10%;
+}
+
+#toggle:checked ~ label::after {
+  content: "";
+  background-color: #fff;
+  transform: rotateZ(-41deg);
+  left: 10%;
+  top: 160%;
+}
+
+#toggle:checked ~ label {
+  background-color: #000;
+}
+
+#toggle ~ label {
+  transition: all 0.5s var(--animation-curve);
+}
+
+input {
+  display: none;
+}
 @media (max-width: 990.98px) {
   .main-content {
     flex-direction: column;
@@ -62,13 +125,15 @@ header * {
   }
 }
 @media (max-width: 768.98px) {
-  .menu-list .menu-item span,
+  /* .menu-list .menu-item span, */
   .line {
     display: none;
   }
 }
 @media (max-width: 576.98px) {
   .menu-list {
-    display: none;
+    position: absolute !important;
+    top: 0;
+    right: 0;
   }
 }
