--- a/components/header/header.module.css
+++ b/components/header/header.module.css
@@ -1,4 +1,9 @@
-
 .active {
-    border-bottom: 3px solid #fff;
+  border-bottom: 3px solid #fff;
+}
+@media (max-width: 576.98px) {
+  .active {
+    border-bottom: none;
+    border-right: 3px solid #fff;
+  }
 }
