--- a/app/globals.css
+++ b/app/globals.css
@@ -112,7 +112,14 @@ label::after {
 #toggle ~ label {
   transition: all 0.5s var(--animation-curve);
 }
-
+.explore-btn {
+  transition: all 1s cubic-bezier(0.85, 0, 0.15, 1) 0s;
+}
+.explore-btn:hover {
+  box-shadow: 0px 0px 0px 48px rgba(255, 255, 255, 0.1);
+  -webkit-box-shadow: 0px 0px 0px 48px rgba(255, 255, 255, 0.1);
+  -moz-box-shadow: 0px 0px 0px 48px rgba(255, 255, 255, 0.1);
+}
 input {
   display: none;
 }
